--- a/unit-converter-ui/src/app/unit-converter-page/unit-converter-page.html
+++ b/unit-converter-ui/src/app/unit-converter-page/unit-converter-page.html
@@ -2,22 +2,16 @@
 
 <div class="measurementTypeOptions">
   @for (measurementType of measurementTypes; track measurementType) {
-  @if (selectedMeasurementType == measurementType) {
-  <button class="measurementTypeOption selectedMeasurementType" id="{{measurementType}}Button"
-    value="{{measurementType}}" (click)="updateSelectedMeasurementType($event)">{{measurementType}}</button>
-  } @else {
-  <button class="measurementTypeOption" id="{{measurementType}}Button" value="{{measurementType}}"
-    (click)="updateSelectedMeasurementType($event)">{{measurementType}}</button>
-  }
+  <button class="measurementTypeOption {{measurementType == selectedMeasurementType ? 'selectedMeasurementType' : '' }}"
+    id="{{measurementType}}Button" value="{{measurementType}}"
+    (click)="updateSelectedMeasurementType($event)">{{measurementType}}
+  </button>
   }
 </div>
 <hr style="border: 0px;">
 <div class="unitConverterForms">
   @for(measurementType of measurementTypes; track measurementType) {
-  @if (selectedMeasurementType == measurementType) {
-  <app-unit-converter-form measurementType="{{measurementType}}"></app-unit-converter-form>
-  } @else {
-  <app-unit-converter-form style="display: none;" measurementType="{{measurementType}}"></app-unit-converter-form>
-  }
+  <app-unit-converter-form class="{{selectedMeasurementType != measurementType ? 'hide' : ''}}"
+    measurementType="{{measurementType}}"></app-unit-converter-form>
   }
 </div>
